--- a/.vim/dein.toml
+++ b/.vim/dein.toml
@@ -259,6 +259,9 @@ hook_add = '''
 [[plugins]]
 repo = 'lambdalisue/gina.vim'
 
+[[plugins]]
+repo = 'lambdalisue/gin.vim'
+
 # fern
 [[plugins]]
 repo = 'lambdalisue/fern.vim'
