add denops shared server config

--- a/.vim/dein.toml
+++ b/.vim/dein.toml
@@ -7,6 +7,9 @@ repo = 'Shougo/ddc.vim'
 
 [[plugins]]
 repo = 'vim-denops/denops.vim'
+hook_add = '''
+    let g:denops_server_addr = '127.0.0.1:32123'
+'''
 
 [[plugins]]
 repo = 'Shougo/pum.vim'
