add ddu-column-filename for ddu-ui-filer

--- a/.vim/dein.toml
+++ b/.vim/dein.toml
@@ -91,6 +91,9 @@ repo = 'yuki-yano/ddu-filter-fzf'
 
 [[plugins]]
 repo = 'Shougo/ddu-kind-file'
+
+[[plugins]]
+repo = 'Shougo/ddu-column-filename'
 # ddu.vim end
 
 #colorscheme start
