add vimtex and configs for compiling latex

--- a/.vim/dein_lazy.toml
+++ b/.vim/dein_lazy.toml
@@ -70,3 +70,23 @@ merged = 0
 on_event = 'BufRead'
 hook_source = 'source ~/dotfiles/.vim/nvim-treesitter.lua'
 # hook_post_update = 'TSUpdate'
+
+[[plugins]]
+repo = 'lervag/vimtex'
+on_ft = 'tex'
+hook_add = '''
+    let g:vimtex_compiler_latexmk = {
+        \ 'build_dir' : '',
+        \ 'callback' : 1,
+        \ 'continuous' : 1,
+        \ 'executable' : 'latexmk',
+        \ 'hooks' : [],
+        \ 'options' : [
+        \   '-pdfdvi',
+        \   '-verbose',
+        \   '-file-line-error',
+        \   '-synctex=1',
+        \   '-interaction=nonstopmode',
+        \ ],
+        \}
+'''
