--- a/.vim/dein.toml
+++ b/.vim/dein.toml
@@ -94,6 +94,9 @@ repo = 'Shougo/ddu-kind-file'
 
 [[plugins]]
 repo = 'Shougo/ddu-column-filename'
+
+[[plugins]]
+repo = 'ryota2357/ddu-column-icons'
 # ddu.vim end
 
 #colorscheme start
