--- a/.vim/dein_lazy.toml
+++ b/.vim/dein_lazy.toml
@@ -53,6 +53,9 @@ hook_add = '''
 [[plugins]]
 repo = 'elzr/vim-json'
 on_ft = 'json'
+hook_add = '''
+    let g:vim_json_syntax_conceal = 0
+'''
 
 [[plugins]]
 repo = 'jupyter-vim/jupyter-vim'
