--- a/.vim/dein_lazy.toml
+++ b/.vim/dein_lazy.toml
@@ -101,7 +101,7 @@ on_event = 'BufEnter'
 
 [[plugins]]
 repo = 'williamboman/mason.nvim'
-on_event = 'BufEnter'
+on_event = 'VimEnter'
 hook_source = '''
     source ~/dotfiles/.vim/nvim-lsp.lua
 '''
@@ -119,11 +119,11 @@ on_source = ['mason.nvim']
 
 [[plugins]]
 repo = 'onsails/lspkind.nvim'
-on_event = 'BufEnter'
+on_source = ['mason.nvim']
 
 [[plugins]]
 repo = 'kkharji/lspsaga.nvim'
-on_event = 'BufEnter'
+on_source = ['mason.nvim']
 
 [[plugins]]
 repo = 'matsui54/denops-signature_help'
