set no padding for vim/neovim in windows terminal

--- a/WindowsTerminal/settings.json
+++ b/WindowsTerminal/settings.json
@@ -90,7 +90,8 @@
             "foreground": "#FFFFFF",
             "opacity": 70,
             "startingDirectory": "%USERPROFILE%",
-            "useAcrylic": true
+            "useAcrylic": true,
+            "padding": "0, 0, -20, 0"
         },
         "list": 
         [
