--- a/.vim/dein_lazy.toml
+++ b/.vim/dein_lazy.toml
@@ -185,3 +185,32 @@ hook_add = '''
     nmap ga <Plug>(EasyAlign)
     xmap ga <Plug>(EasyAlign)
 '''
+
+[[plugins]]
+repo = 'Shougo/pum.vim'
+# depends = ['vim-vsnip', 'vim-vsnip-integ']
+on_event = 'VimEnter'
+hook_add = '''
+autocmd User PumCompleteDone call vsnip_integ#on_complete_done(g:pum#completed_item)
+'''
+
+[[plugins]]
+repo = 'hrsh7th/vim-vsnip'
+on_event = 'BufEnter'
+hook_add = '''
+    imap <expr> <C-k> vsnip#expandable() ? '<Plug>(vsnip-expand)' : '<C-k>'
+    smap <expr> <C-k> vsnip#expandable() ? '<Plug>(vsnip-expand)' : '<C-k>'
+    imap <expr> <C-f> vsnip#jumpable(1) ? '<Plug>(vsnip-jump-next)' : '<C-f>'
+    smap <expr> <C-f> vsnip#jumpable(1) ? '<Plug>(vsnip-jump-next)' : '<C-f>'
+    imap <expr> <C-b> vsnip#jumpable(-1) ? '<Plug>(vsnip-jump-prev)' : '<C-b>'
+    smap <expr> <C-b> vsnip#jumpable(-1) ? '<Plug>(vsnip-jump-prev)' : '<C-b>'
+    "let g:vsnip_filetypes = {}
+'''
+
+[[plugins]]
+repo = 'hrsh7th/vim-vsnip-integ'
+on_source = ['vim-vsnip']
+
+[[plugins]]
+repo = 'rafamadriz/friendly-snippets'
+on_source = ['vim-vsnip']
