--- a/.vim/dein_lazy.toml
+++ b/.vim/dein_lazy.toml
@@ -147,6 +147,14 @@ hook_add = '''
 '''
 
 [[plugins]]
+repo = 'ryanoasis/vim-devicons'
+on_source = ['trouble.nvim']
+
+[[plugins]]
+repo = 'kyazdani42/nvim-web-devicons'
+on_source = ['trouble.nvim']
+
+[[plugins]]
 repo = 'Shougo/deol.nvim'
 on_event = 'VimEnter'
 hook_add = '''
