move vim-gitbranch to dein_lightline_lazy

--- a/.vim/dein_lightline_lazy.toml
+++ b/.vim/dein_lightline_lazy.toml
@@ -99,3 +99,7 @@ hook_source = '''
         call lightline#update()
     endfunction
 '''
+
+[[plugins]]
+repo = 'itchyny/vim-gitbranch'
+on_source = ['lightline.vim']
