--- a/.vim/dein_lazy.toml
+++ b/.vim/dein_lazy.toml
@@ -19,6 +19,7 @@ depends = ['open-browser.vim']
 
 [[plugins]]
 repo = 'tani/glance-vim'
+on_ft = 'markdown'
 hook_source = '''
     let g:glance#markdown_breaks = v:true
     let g:glance#markdown_html = v:true
@@ -59,7 +60,7 @@ hook_add = '''
 
 [[plugins]]
 repo = 'jupyter-vim/jupyter-vim'
-on_event = 'BufEnter'
+on_ft = 'python'
 hook_add = '''
     nnoremap <buffer> <silent> <leader>jc :JupyterConnect<CR>
     nnoremap <buffer> <silent> <leader>jd :JupyterDiconnect<CR>
@@ -248,3 +249,125 @@ on_source = ['vim-vsnip']
 [[plugins]]
 repo = 'rafamadriz/friendly-snippets'
 on_source = ['vim-vsnip']
+
+[[plugins]]
+repo = 'markonm/traces.vim'
+on_event = 'BufEnter'
+
+[[plugins]]
+repo = 'osyo-manga/vim-precious'
+on_event = 'BufEnter'
+hook_add = '''
+    let g:precious_enable_switch_CursorMoved = {
+        \ "*": 0,
+        \ "help": 1,
+        \ "toml": 1,
+    \ }
+
+    augroup precious
+        autocmd! *
+        autocmd InsertEnter * :PreciousSwitch
+        autocmd InsertLeave * :PreciousReset
+    augroup END
+'''
+
+[[plugins]]
+repo = 'Shougo/context_filetype.vim'
+on_event = 'BufEnter'
+
+[[plugins]]
+repo = 'haya14busa/vim-edgemotion'
+on_event = 'BufEnter'
+hook_add = '''
+    nmap <C-j> <Plug>(edgemotion-j)
+    nmap <C-k> <Plug>(edgemotion-k)
+    vmap <C-j> <Plug>(edgemotion-j)
+    vmap <C-k> <Plug>(edgemotion-k)
+'''
+
+[[plugins]]
+repo = 'lambdalisue/gin.vim'
+on_event = 'BufEnter'
+
+[[plugins]]
+repo = 'mechatroner/rainbow_csv'
+on_ft = 'csv'
+
+[[plugins]]
+repo = 'kshenoy/vim-signature'
+on_event = ['BufEnter']
+
+[[plugins]]
+repo = 'osyo-manga/vim-anzu'
+on_event = 'BufEnter'
+hook_add = '''
+    nmap n <Plug>(anzu-n-with-echo)
+    nmap N <Plug>(anzu-N-with-echo)
+    nmap * <Plug>(asterisk-z*)<Plug>(anzu-update-search-status-with-echo)
+    nmap # <Plug>(asterisk-z#)<Plug>(anzu-update-search-status-with-echo)
+    set statusline=%{anzu#search_status()}
+    "hide highlight and anzu-status
+    nmap <silent><esc><esc> :nohlsearch<CR><esc> <Plug>(anzu-clear-search-status)
+'''
+
+[[plugins]]
+repo = 'haya14busa/vim-asterisk'
+on_source = ['vim-anzu']
+
+[[plugins]]
+repo = 'tpope/vim-surround'
+on_event = ['BufEnter']
+
+[[plugins]]
+repo = 'Yggdroot/indentLine'
+on_event = ['BufEnter']
+hook_add = '''
+    let g:indentLine_setConceal = 0
+    let g:indentLine_char = '¦'
+'''
+
+[[plugins]]
+repo = 'bronson/vim-trailing-whitespace'
+on_event = ['BufEnter']
+
+[[plugins]]
+repo = 'tpope/vim-commentary'
+on_event = ['BufEnter']
+hook_add = '''
+    augroup commentary
+        autocmd!
+        autocmd FileType cpp let b:commentary_format = '// %s'
+        autocmd FileType matlab let b:commentary_format = '% %s'
+    augroup END
+'''
+
+[[plugins]]
+repo = 'easymotion/vim-easymotion'
+on_event = ['BufEnter']
+hook_add = '''
+    let g:EasyMotion_smartcase = 1
+'''
+
+[[plugins]]
+repo = 'terryma/vim-multiple-cursors'
+on_event = ['BufEnter']
+
+[[plugins]]
+repo = 'lilydjwg/colorizer'
+on_event = ['BufEnter']
+hook_add = '''
+    let g:colorizer_maxlines = 500
+	let g:colorizer_nomap = 1
+'''
+
+[[plugins]]
+repo = 'goerz/jupytext.vim'
+on_path = ['\.ipynb', '\.py']
+hook_add = '''
+    let g:jupytext_fmt = 'py:percent'
+    let g:jupytext_filetype_map = {'py': 'python'}
+'''
+
+[[plugins]]
+on_event = 'VimEnter'
+repo = 'kmnk/denite-dirmark'
