--- a/.vim/toml/dein_lazy.toml
+++ b/.vim/toml/dein_lazy.toml
@@ -73,7 +73,7 @@ hook_add = '''
 repo = 'nvim-treesitter/nvim-treesitter'
 merged = 0
 on_event = 'BufRead'
-hook_source = 'source ~/dotfiles/.vim/nvim-treesitter.lua'
+hook_source = 'source ~/dotfiles/.vim/lua/nvim-treesitter.lua'
 # hook_post_update = 'TSUpdate'
 
 [[plugins]]
@@ -103,9 +103,7 @@ on_event = 'BufEnter'
 [[plugins]]
 repo = 'williamboman/mason.nvim'
 on_event = 'VimEnter'
-hook_source = '''
-    source ~/dotfiles/.vim/nvim-lsp.lua
-'''
+hook_source = 'source ~/dotfiles/.vim/lua/nvim-lsp.lua'
 
 [[plugins]]
 repo = 'williamboman/mason-lspconfig.nvim'
