--- a/.vim/toml/dein_lazy.toml
+++ b/.vim/toml/dein_lazy.toml
@@ -351,11 +351,10 @@ repo = 'terryma/vim-multiple-cursors'
 on_event = ['BufEnter']
 
 [[plugins]]
-repo = 'lilydjwg/colorizer'
-on_event = ['BufEnter']
-hook_add = '''
-    let g:colorizer_maxlines = 500
-	let g:colorizer_nomap = 1
+repo = 'norcalli/nvim-colorizer.lua'
+on_event = 'BufEnter'
+hook_source = '''
+    lua require('colorizer').setup()
 '''
 
 [[plugins]]
