--- a/.vim/toml/dein_lazy.toml
+++ b/.vim/toml/dein_lazy.toml
@@ -45,8 +45,8 @@ on_cmd = ['Repl', 'ReplAuto']
 
 [[plugins]]
 repo = 'AndrewRadev/linediff.vim'
-on_event = 'BufEnter'
-hook_add = '''
+on_event = ['InsertEnter', 'CursorMoved']
+hook_source = '''
     let g:linediff_first_buffer_command = 'leftabove new'
     let g:linediff_second_buffer_command = 'rightbelow vertical new'
 '''
@@ -54,14 +54,14 @@ hook_add = '''
 [[plugins]]
 repo = 'elzr/vim-json'
 on_ft = 'json'
-hook_add = '''
+hook_source = '''
     let g:vim_json_syntax_conceal = 0
 '''
 
 [[plugins]]
 repo = 'jupyter-vim/jupyter-vim'
 on_ft = 'python'
-hook_add = '''
+hook_source = '''
     nnoremap <buffer> <silent> <leader>jc :JupyterConnect<CR>
     nnoremap <buffer> <silent> <leader>jd :JupyterDiconnect<CR>
     nnoremap <buffer> <silent> <leader>js :JupyterSendCell<CR>
@@ -74,12 +74,11 @@ repo = 'nvim-treesitter/nvim-treesitter'
 merged = 0
 on_event = 'BufRead'
 hook_source = 'source ~/dotfiles/.vim/lua/nvim-treesitter.lua'
-# hook_post_update = 'TSUpdate'
 
 [[plugins]]
 repo = 'lervag/vimtex'
 on_ft = 'tex'
-hook_add = '''
+hook_source = '''
     let g:vimtex_compiler_latexmk = {
         \ 'build_dir' : '',
         \ 'callback' : 1,
@@ -126,22 +125,22 @@ on_source = ['mason.nvim']
 
 [[plugins]]
 repo = 'matsui54/denops-signature_help'
-on_event = 'BufEnter'
+on_event = 'InsertEnter'
 hook_source = '''
     call signature_help#enable()
 '''
 
 [[plugins]]
 repo = 'matsui54/denops-popup-preview.vim'
-on_event = 'BufEnter'
+on_event = 'InsertEnter'
 hook_source = '''
     call popup_preview#enable()
 '''
 
 [[plugins]]
 repo = 'folke/trouble.nvim'
-on_event = 'BufEnter'
-hook_add = '''
+on_event = ['CmdlineEnter', 'CursorMoved']
+hook_source = '''
     nnoremap <C-l>t :TroubleToggle<CR>
 '''
 
@@ -155,8 +154,8 @@ on_source = ['trouble.nvim']
 
 [[plugins]]
 repo = 'Shougo/deol.nvim'
-on_event = 'VimEnter'
-hook_add = '''
+on_event = 'BufEnter'
+hook_source = '''
     let g:deol#enable_ddc_completion = v:true
     let g:deol#floating_border = 'single'
     tnoremap <Esc> <C-\><C-n>
@@ -187,16 +186,16 @@ hook_add = '''
 
 [[plugins]]
 repo = 'junegunn/vim-easy-align'
-on_event = 'BufEnter'
-hook_add = '''
+on_event = 'CursorMoved'
+hook_source = '''
     nmap ga <Plug>(EasyAlign)
     xmap ga <Plug>(EasyAlign)
 '''
 
 [[plugins]]
 repo = 'vim-skk/skkeleton'
-on_event = 'BufEnter'
-hook_add = '''
+on_event = 'InsertEnter'
+hook_source = '''
     imap <C-j> <Plug>(skkeleton-toggle)
     cmap <C-j> <Plug>(skkeleton-toggle)
     call skkeleton#config({
@@ -214,23 +213,23 @@ hook_add = '''
 [[plugins]]
 repo = 'Matts966/skk-vconv.vim'
 on_source = ['skkeleton']
-hook_add = '''
+hook_source = '''
     let g:skk_vconv#no_default_mappings = v:true
     vmap <C-s> <Plug>(skk-vconv:conv)
 '''
 
 [[plugins]]
 repo = 'Shougo/pum.vim'
-# depends = ['vim-vsnip', 'vim-vsnip-integ']
-on_event = 'VimEnter'
-hook_add = '''
+on_event = 'InsertEnter'
+depends = ['vim-vsnip', 'vim-vsnip-integ']
+hook_source = '''
 autocmd User PumCompleteDone call vsnip_integ#on_complete_done(g:pum#completed_item)
 '''
 
 [[plugins]]
 repo = 'hrsh7th/vim-vsnip'
-on_event = 'BufEnter'
-hook_add = '''
+on_event = 'InsertEnter'
+hook_source = '''
     imap <expr> <C-k> vsnip#expandable() ? '<Plug>(vsnip-expand)' : '<C-k>'
     smap <expr> <C-k> vsnip#expandable() ? '<Plug>(vsnip-expand)' : '<C-k>'
     imap <expr> <C-f> vsnip#jumpable(1) ? '<Plug>(vsnip-jump-next)' : '<C-f>'
@@ -250,12 +249,12 @@ on_source = ['vim-vsnip']
 
 [[plugins]]
 repo = 'markonm/traces.vim'
-on_event = 'BufEnter'
+on_event = ['CursorMoved', 'CmdlineEnter']
 
 [[plugins]]
 repo = 'osyo-manga/vim-precious'
-on_event = 'BufEnter'
-hook_add = '''
+on_event = 'CursorMoved'
+hook_source = '''
     let g:precious_enable_switch_CursorMoved = {
         \ "*": 0,
         \ "help": 1,
@@ -271,12 +270,12 @@ hook_add = '''
 
 [[plugins]]
 repo = 'Shougo/context_filetype.vim'
-on_event = 'BufEnter'
+on_source = ['vim-precious']
 
 [[plugins]]
 repo = 'haya14busa/vim-edgemotion'
-on_event = 'BufEnter'
-hook_add = '''
+on_event = 'CursorMoved'
+hook_source = '''
     nmap <C-j> <Plug>(edgemotion-j)
     nmap <C-k> <Plug>(edgemotion-k)
     vmap <C-j> <Plug>(edgemotion-j)
@@ -293,12 +292,12 @@ on_ft = 'csv'
 
 [[plugins]]
 repo = 'kshenoy/vim-signature'
-on_event = ['BufEnter']
+on_event = 'BufEnter'
 
 [[plugins]]
 repo = 'osyo-manga/vim-anzu'
 on_event = 'BufEnter'
-hook_add = '''
+hook_source = '''
     nmap n <Plug>(anzu-n-with-echo)
     nmap N <Plug>(anzu-N-with-echo)
     nmap * <Plug>(asterisk-z*)<Plug>(anzu-update-search-status-with-echo)
@@ -314,12 +313,12 @@ on_source = ['vim-anzu']
 
 [[plugins]]
 repo = 'tpope/vim-surround'
-on_event = ['BufEnter']
+on_event = 'CursorMoved'
 
 [[plugins]]
 repo = 'Yggdroot/indentLine'
 on_event = ['BufEnter']
-hook_add = '''
+hook_source = '''
     let g:indentLine_setConceal = 0
     let g:indentLine_char = '¦'
 '''
@@ -331,7 +330,7 @@ on_event = ['BufEnter']
 [[plugins]]
 repo = 'tpope/vim-commentary'
 on_event = ['BufEnter']
-hook_add = '''
+hook_source = '''
     augroup commentary
         autocmd!
         autocmd FileType cpp let b:commentary_format = '// %s'
@@ -342,7 +341,7 @@ hook_add = '''
 [[plugins]]
 repo = 'easymotion/vim-easymotion'
 on_event = ['BufEnter']
-hook_add = '''
+hook_source = '''
     let g:EasyMotion_smartcase = 1
 '''
 
@@ -360,16 +359,16 @@ hook_source = '''
 [[plugins]]
 repo = 'goerz/jupytext.vim'
 on_path = ['\.ipynb', '\.py']
-hook_add = '''
+hook_source = '''
     let g:jupytext_fmt = 'py:percent'
     let g:jupytext_filetype_map = {'py': 'python'}
 '''
 
 [[plugins]]
 repo = 'kmnk/denite-dirmark'
-on_event = 'VimEnter'
+on_event = 'BufEnter'
 
 [[plugins]]
 repo = 'lewis6991/gitsigns.nvim'
-on_event = 'BufEnter'
+on_event = 'VimEnter'
 hook_source = 'source ~/dotfiles/.vim/lua/gitsigns.lua'
