--- a/.vim/toml/dein_lazy.toml
+++ b/.vim/toml/dein_lazy.toml
@@ -194,7 +194,7 @@ hook_source = '''
 
 [[plugins]]
 repo = 'vim-skk/skkeleton'
-on_event = 'InsertEnter'
+on_event = 'BufEnter'
 hook_source = '''
     imap <C-j> <Plug>(skkeleton-toggle)
     cmap <C-j> <Plug>(skkeleton-toggle)
