--- a/.vim/toml/dein.toml
+++ b/.vim/toml/dein.toml
@@ -75,35 +75,51 @@ ddu-ff-filter = '''
 repo = 'Shougo/ddu-ui-filer'
 [plugins.ftplugin]
 ddu-filer = '''
-    nnoremap <buffer><silent><expr> l ddu#ui#filer#is_directory() ?
-        \ "<Cmd>call ddu#ui#filer#do_action('expandItem')<CR>" :
-        \ "<Cmd>call ddu#ui#filer#do_action('itemAction', {'params': {'command': 'drop'}})<CR>"
-    nnoremap <buffer><silent><expr> h ddu#ui#filer#is_directory() ? "<Cmd>call ddu#ui#filer#do_action('collapseItem')<CR>" : ""
-    nnoremap <buffer><silent> <S-l> <Cmd>call ddu#ui#filer#do_action('itemAction', {'name': 'narrow'})<CR>
-    nnoremap <buffer><silent> <S-h> <Cmd>call ddu#ui#filer#do_action('itemAction', {'name': 'narrow', 'params': {'path': '..'}})<CR>
-    nnoremap <buffer><silent> c <Cmd>call ddu#ui#filer#do_action('itemAction', {'name': 'cd'})<CR>
-    nnoremap <buffer><silent> a <Cmd>call ddu#ui#filer#do_action('toggleAllItems')<CR>
-    nnoremap <buffer><silent> x <Cmd>call ddu#ui#filer#do_action('toggleSelectItem')<CR>
-    nnoremap <buffer><silent><expr> <CR> ddu#ui#filer#is_directory() ?
-        \ "<Cmd>call ddu#ui#filer#do_action('expandItem', {'mode': 'toggle'})<CR>" :
-        \ "<Cmd>call ddu#ui#filer#do_action('itemAction', {'params': {'command': 'drop'}})<CR>"
-    nnoremap <buffer><silent> r <Cmd>call ddu#ui#filer#do_action('refreshItems')<CR>
-    nnoremap <buffer><silent><expr> o ddu#ui#filer#is_directory() ? "" : "<Cmd>call ddu#ui#filer#do_action('itemAction')<CR>"
-    nnoremap <buffer><silent><expr> s ddu#ui#filer#is_directory() ? "" : "<Cmd>call ddu#ui#filer#do_action('itemAction', {'params': {'command': 'split'}})<CR>"
-    nnoremap <buffer><silent><expr> v ddu#ui#filer#is_directory() ? "" : "<Cmd>call ddu#ui#filer#do_action('itemAction', {'params': {'command': 'vsplit'}})<CR>"
-    nnoremap <buffer><silent> <leader>b <Cmd>call ddu#ui#filer#do_action('itemAction', {'name': 'dirmark'})<CR>
-    nnoremap <buffer><silent> <leader>c <Cmd>call ddu#ui#filer#do_action('itemAction', {'name': 'copy'})<CR>
-    nnoremap <buffer><silent> <leader>d <Cmd>call ddu#ui#filer#do_action('itemAction', {'name': 'delete'})<CR>
-    nnoremap <buffer><silent> <leader>k <Cmd>call ddu#ui#filer#do_action('itemAction', {'name': 'newDirectory'})<CR>
-    nnoremap <buffer><silent> <leader>l <Cmd>call ddu#ui#filer#do_action('itemAction', {'name': 'loclist'})<CR>
-    nnoremap <buffer><silent> <leader>m <Cmd>call ddu#ui#filer#do_action('itemAction', {'name': 'move'})<CR>
-    nnoremap <buffer><silent> <leader>n <Cmd>call ddu#ui#filer#do_action('itemAction', {'name': 'newFile'})<CR>
-    nnoremap <buffer><silent> <leader>p <Cmd>call ddu#ui#filer#do_action('itemAction', {'name': 'paste'})<CR>
-    nnoremap <buffer><silent> <leader>q <Cmd>call ddu#ui#filer#do_action('itemAction', {'name': 'quickfix'})<CR>
-    nnoremap <buffer><silent> <leader>r <Cmd>call ddu#ui#filer#do_action('itemAction', {'name': 'rename'})<CR>
-    nnoremap <buffer><silent> <leader>y <Cmd>call ddu#ui#filer#do_action('itemAction', {'name': 'yank'})<CR>
-    nnoremap <buffer><silent> q <Cmd>close<CR>
+    nnoremap <buffer> * <Cmd>call ddu#ui#filer#do_action('toggleAllItems')<CR>
+    nnoremap <buffer> a <Cmd>call ddu#ui#ff#do_action('chooseAction')<CR>
+    nnoremap <buffer> b <Cmd>call ddu#ui#filer#do_action('itemAction', {'name': 'dirmark'})<CR>
+    nnoremap <buffer> c <Cmd>call ddu#ui#filer#multi_actions([
+        \ ['itemAction', {'name': 'copy'}],
+        \ ['clearSelectAllItems'],
+    \ ])<CR>
+    nnoremap <buffer> C <Cmd>call ddu#ui#filer#do_action('itemAction', {'name': 'cd'})<CR>
+    nnoremap <buffer> d <Cmd>call ddu#ui#filer#do_action('itemAction', {'name': 'trash'})<CR>
+    nnoremap <buffer> D <Cmd>call ddu#ui#filer#do_action('itemAction', {'name': 'delete'})<CR>
+    nnoremap <buffer> h <Cmd>call ddu#ui#filer#do_action('itemAction', {'name': 'narrow', 'params': {'path': '..'}})<CR>
+    nnoremap <buffer> I <Cmd>call ddu#ui#filer#do_action('itemAction', {'name': 'narrow',
+        \ 'params': {'path': fnamemodify(input('New cwd: ', b:ddu_ui_filer_path, 'dir'), ':p')}})<CR>
+    nnoremap <buffer> K <Cmd>call ddu#ui#filer#do_action('itemAction', {'name': 'newDirectory'})<CR>
+    nnoremap <buffer> m <Cmd>call ddu#ui#filer#do_action('itemAction', {'name': 'move'})<CR>
+    nnoremap <buffer> N <Cmd>call ddu#ui#filer#do_action('itemAction', {'name': 'newFile'})<CR>
+    nnoremap <buffer> o <Cmd>call ddu#ui#filer#do_action('expandItem', {'mode': 'toggle'})<CR>
+    nnoremap <buffer> O <Cmd>call ddu#ui#filer#do_action('expandItem', {'maxLevel': -1})<CR>
+    nnoremap <buffer> p <Cmd>call ddu#ui#filer#do_action('itemAction', {'name': 'paste'})<CR>
+    nnoremap <buffer> q <Cmd>call ddu#ui#ff#do_action('quit')<CR>
+    nnoremap <buffer> r <Cmd>call ddu#ui#filer#do_action('itemAction', {'name': 'rename'})<CR>
+    nnoremap <buffer> x <Cmd>call ddu#ui#filer#do_action('toggleSelectItem')<CR>
+    nnoremap <buffer> y <Cmd>call ddu#ui#filer#do_action('itemAction', {'name': 'yank'})<CR>
+    nnoremap <buffer> <leader>l <Cmd>call ddu#ui#filer#do_action('itemAction', {'name': 'loclist'})<CR>
+    nnoremap <buffer> <leader>q <Cmd>call ddu#ui#filer#do_action('itemAction', {'name': 'quickfix'})<CR>
+    nnoremap <buffer> <C-l> <Cmd>call ddu#ui#filer#do_action('checkItems')<CR>
+    nnoremap <buffer><expr> s ddu#ui#filer#is_directory() ? "" : "<Cmd>call ddu#ui#filer#do_action('itemAction', {'name': 'open', 'params': {'command': 'split'}})<CR>"
+    nnoremap <buffer><expr> v ddu#ui#filer#is_directory() ? "" : "<Cmd>call ddu#ui#filer#do_action('itemAction', {'name': 'open', 'params': {'command': 'vsplit'}})<CR>"
+    nnoremap <buffer> ~ <Cmd>call ddu#ui#filer#do_action('itemAction', {'name': 'narrow', 'params': {'path': expand('~')}})<CR>
+    nnoremap <buffer> > <Cmd>call ddu#ui#filer#do_action('updateOptions',
+        \ {'sourceOptions': {'file': {'matchers': ToggleHidden('file')}}})<CR>
+    nnoremap <buffer><expr> <CR> ddu#ui#filer#is_directory() ?
+        \ "<Cmd>call ddu#ui#filer#do_action('itemAction', {'name': 'narrow'})<CR>" :
+        \ "<Cmd>call ddu#ui#filer#do_action('itemAction', {'name': 'open'})<CR>"
     nnoremap <buffer> <Esc><Esc> <Nop>
+
+    function! ToggleHidden(name)
+        let current = ddu#custom#get_current(b:ddu_ui_name)
+        let source_options = get(current, 'sourceOptions', {})
+        let source_options_name = get(source_options, a:name, {})
+        let matchers = get(source_options_name, 'matchers', [])
+        return empty(matchers) ? ['matcher_hidden'] : []
+    endfunction
+
+    autocmd TabEnter,CursorHold,FocusGained <buffer> call ddu#ui#filer#do_action('checkItems')
 '''
 
 [[plugins]]
@@ -141,6 +157,9 @@ repo = 'k-ota106/ddu-source-marks'
 
 [[plugins]]
 repo = 'Shougo/ddu-filter-matcher_substring'
+
+[[plugins]]
+repo = 'Shougo/ddu-filter-matcher_hidden'
 
 [[plugins]]
 repo = 'yuki-yano/ddu-filter-fzf'
