--- a/.vim/toml/dein_lazy.toml
+++ b/.vim/toml/dein_lazy.toml
@@ -395,3 +395,12 @@ hook_source = '''
     nmap <leader>tr <Plug>(Translate)
     vmap <leader>tr <Plug>(Translate)
 '''
+
+[[plugins]]
+repo = 'dinhhuy258/git.nvim'
+on_event = 'VimEnter'
+hook_source = '''
+lua << EOF
+require('git').setup()
+EOF
+'''
