--- a/.vim/toml/dein_lazy.toml
+++ b/.vim/toml/dein_lazy.toml
@@ -404,3 +404,10 @@ lua << EOF
 require('git').setup()
 EOF
 '''
+
+[[plugins]]
+repo = 'dstein64/vim-startuptime'
+on_event = 'VimEnter'
+hook_source = '''
+    let g:startuptime_tries = 10
+'''
