--- a/.vim/toml/dein_lazy.toml
+++ b/.vim/toml/dein_lazy.toml
@@ -251,6 +251,8 @@ repo = 'Matts966/skk-vconv.vim'
 on_source = ['skkeleton']
 hook_source = '''
     let g:skk_vconv#no_default_mappings = v:true
+'''
+hook_post_source = '''
     vmap <C-s> <Plug>(skk-vconv:conv)
 '''
 
