--- a/.vim/toml/ddu.toml
+++ b/.vim/toml/ddu.toml
@@ -140,6 +140,10 @@ repo = 'Shougo/ddu-filter-matcher_substring'
 on_source = ['ddu.vim']
 
 [[plugins]]
+repo = 'matsui54/ddu-source-dein_update'
+on_source = ['ddu.vim']
+
+[[plugins]]
 repo = 'Shougo/ddu-filter-matcher_hidden'
 on_source = ['ddu.vim']
 
