map q in vsession-quickpick-filter to call <Plug>(vsession-quickpick-cancel)

--- a/.vim/toml/dein_lazy.toml
+++ b/.vim/toml/dein_lazy.toml
@@ -442,5 +442,5 @@ vsession-quickpick = '''
     nnoremap <buffer><silent> q :close<CR>
 '''
 vsession-quickpick-filter = '''
-    nnoremap <buffer><silent> q :close<CR>
+    nmap <buffer><silent> q <Plug>(vsession-quickpick-cancel)
 '''
