set markerHenkan and markerHenkanSelect in skkeleton to no ambiguous width ones

--- a/.vim/toml/dein_lazy.toml
+++ b/.vim/toml/dein_lazy.toml
@@ -240,6 +240,8 @@ hook_source = '''
     \   'userJisyo': "~/.config/skk/my_jisyo",
     \   'usePopup': v:false,
     \   'keepState': v:true,
+    \   'markerHenkan': '>',
+    \   'markerHenkanSelect': 'v',
     \ })
     call skkeleton#register_kanatable('rom', {
         \ 'jj': 'escape',
