--- a/.vim/toml/dein_lazy.toml
+++ b/.vim/toml/dein_lazy.toml
@@ -153,22 +153,25 @@ hook_source = '''
 
 [[plugins]]
 repo = 'matsui54/denops-signature_help'
-on_source = ['denops.vim']
+depends = ['denops.vim']
+on_event = 'BufRead'
 hook_source = '''
     call signature_help#enable()
 '''
 
 [[plugins]]
 repo = 'matsui54/denops-popup-preview.vim'
-on_source = ['denops.vim']
+depends = ['denops.vim']
+on_event = 'BufRead'
 hook_source = '''
     call popup_preview#enable()
 '''
 
 [[plugins]]
 repo = 'skanehira/denops-translate.vim'
-on_source = ['denops.vim']
-hook_post_source = '''
+depends = ['denops.vim']
+on_event = 'BufRead'
+hook_source = '''
     nmap <Leader>tr <Plug>(Translate)
     vmap <Leader>tr <Plug>(Translate)
 '''
