change to load configs for ddc and ddu lazily

--- a/.vim/toml/ddu.toml
+++ b/.vim/toml/ddu.toml
@@ -1,6 +1,10 @@
 [[plugins]]
 repo = 'Shougo/ddu.vim'
-on_source = ['denops.vim']
+depends = ['denops.vim']
+on_event = ['BufEnter']
+hook_source = '''
+    source ~/dotfiles/.vim/settings/ddu_rc.vim
+'''
 
 [[plugins]]
 repo = 'Shougo/ddu-ui-ff'
