--- a/.vim/toml/ddc.toml
+++ b/.vim/toml/ddc.toml
@@ -1,6 +1,10 @@
 [[plugins]]
 repo = 'Shougo/ddc.vim'
-on_source = ['denops.vim']
+depends = ['denops.vim']
+on_event = ['BufEnter']
+hook_source = '''
+    source ~/dotfiles/.vim/settings/ddc_rc.vim
+'''
 
 [[plugins]]
 repo = 'Shougo/ddc-around'
