--- a/.vim/toml/dein_lazy.toml
+++ b/.vim/toml/dein_lazy.toml
@@ -125,7 +125,7 @@ on_event = 'BufEnter'
 
 [[plugins]]
 repo = 'williamboman/mason.nvim'
-on_event = 'BufEnter'
+on_event = ['CursorHold', 'InsertEnter', 'BufRead']
 on_cmd = ['Mason', 'MasonInstall', 'MasonUninstall', 'MasonUninstallAll', 'MasonLog']
 hook_source = 'source ~/dotfiles/.vim/lua/nvim-lsp.lua'
 
