move ddc-nvim-lsp to ddc.toml

--- a/.vim/toml/ddc.toml
+++ b/.vim/toml/ddc.toml
@@ -37,3 +37,7 @@ on_source = ['ddc.vim']
 [[plugins]]
 repo = 'Shougo/ddc-cmdline-history'
 on_source = ['ddc.vim']
+
+[[plugins]]
+repo = 'Shougo/ddc-nvim-lsp'
+on_source = ['ddc.vim']
