--- a/.vim/toml/dein_lightline_lazy.toml
+++ b/.vim/toml/dein_lightline_lazy.toml
@@ -1,6 +1,6 @@
 [[plugins]]
 repo = 'itchyny/lightline.vim'
-on_event = 'VimEnter'
+on_event = 'BufEnter'
 hook_source = '''
     let s:lightline_colorscheme = 'sonokai'
     let g:lightline = {
