--- a/.vim/toml/dein_lazy.toml
+++ b/.vim/toml/dein_lazy.toml
@@ -4,7 +4,7 @@ on_event = 'VimEnter'
 
 [[plugins]]
 repo = 'Townk/vim-autoclose'
-on_event = 'InsertEnter'
+on_event = ['BufEnter']
 
 [[plugins]]
 repo = 'tyru/open-browser.vim'
