--- a/.vim/toml/dein_lazy.toml
+++ b/.vim/toml/dein_lazy.toml
@@ -313,12 +313,17 @@ on_func = 'signature#'
 repo = 'osyo-manga/vim-anzu'
 on_event = ['BufRead', 'CursorHold']
 hook_source = '''
-    nmap n <Plug>(anzu-n-with-echo)
-    nmap N <Plug>(anzu-N-with-echo)
-    nmap * <Plug>(asterisk-z*)<Plug>(anzu-update-search-status-with-echo)
-    nmap # <Plug>(asterisk-z#)<Plug>(anzu-update-search-status-with-echo)
+    nmap n <Plug>(anzu-n)
+    nmap N <Plug>(anzu-N)
+    nmap * <Plug>(asterisk-z*)<Plug>(anzu-star)
+    nmap # <Plug>(asterisk-z#)<Plug>(anzu-sharp)
     "hide highlight and anzu-status
     nmap <silent><esc><esc> :nohlsearch<CR><esc> <Plug>(anzu-clear-search-status)
+
+    augroup vim-anzu
+        autocmd!
+        autocmd WinLeave,TabLeave * call anzu#clear_search_status()
+    augroup END
 '''
 
 [[plugins]]
