--- a/.vim/toml/dein_lazy.toml
+++ b/.vim/toml/dein_lazy.toml
@@ -75,7 +75,7 @@ hook_source = '''
 
 [[plugins]]
 repo = 'nvim-treesitter/nvim-treesitter'
-on_event = 'BufRead'
+on_event = 'CursorHold'
 on_cmd = ['TSUpdate', 'TSUpdateSync']
 hook_source = 'source ~/dotfiles/.vim/lua/nvim-treesitter.lua'
 
